fix title overflow

--- a/resources/stylesheets/catalog.css
+++ b/resources/stylesheets/catalog.css
@@ -1,7 +1,10 @@
 .catalog-name{
     display: block;
     position: relative;
-    width: 100%;
+    height: 18px;
+    font-size: 18px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: #e43117;
 }
 
